レイアウト調整

--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,9 +1,21 @@
-    <h2>ジャンル編集</h2>
-    <%= form_with model:@genre, url: admin_genre_path(@genre.id), local:true, method: :patch do |f| %>
-      <div class="form-group">
-        <%= f.label " ジャンル名" %>
-        <%= f.text_field :name %>
-      <div class="form-group">
-        <%= f.submit "変更を保存", class: 'btn btn-secondary' %>
+<div class="container">
+  <div style="d-flex align-items-center height:100px;">
+    <h4>
+     ジャンル編集
+    </h4>
+  </div>
+</div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8">
+        <%= form_with model:@genre, url: admin_genre_path(@genre.id), local:true, method: :patch do |f| %>
+          <span class="form-group">
+            <%= f.label " ジャンル名" %>
+            <%= f.text_field :name %>
+          <span class="form-group">
+            &emsp;&emsp;&emsp;<%= f.submit "変更を保存", class: 'btn btn-success' %>
+          </span>
+        <% end %>
       </div>
-    <% end %>
+    </div>
+  </div>
