--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer>
-  <div class='container mt-5'>
+  <div class='container'>
   	<div class='row'>
     	<div class='mx-auto'>
     		<p>nagano cake</p>
