--- a/app/views/public/deliveries/_index.html.erb
+++ b/app/views/public/deliveries/_index.html.erb
@@ -1,9 +1,9 @@
-  <thead>
+ <table class="table"  border="2" style="font-size: 13pt; height: 80%;" >
+  <thead bgcolor="#f5f5f5" >
     <tr>
       <th>郵便番号</th>
       <th>住所</th>
       <th>宛名</th>
-      <th></th>
       <th></th>
     </tr>
   </thead>
@@ -16,8 +16,8 @@
         <td><%= delivery.address %></td>
         <!--宛名表示-->
         <td><%= delivery.name %></td>
-        <td><%= link_to "編集", edit_public_delivery_path(delivery.id), class:"btn btn-success" %></td>
-        <td><%= link_to "削除", public_delivery_path(delivery.id), class:"btn btn-danger", method: :delete %><td>
+        <td align="center"><%= link_to "編集", edit_public_delivery_path(delivery.id), class:"btn btn-success btn-sm" %>
+            <%= link_to "削除", public_delivery_path(delivery.id), class:"btn btn-danger btn-sm", method: :delete %></td>
       </tr>
     <% end %>
   </tbody>
