--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,20 +1,33 @@
-      <h2>ジャンル一覧/追加<h2>
-        <div>
-          <%= render 'create', genre: @genre %>
-        </div>
-        <table>
+<div class="container">
+  <div style="d-flex align-items-center height:100px;">
+    <h4>
+     ジャンル一覧/追加
+    </h4>
+  </div>
+</div>
+  <div class="container">
+    <div class = row>
+      <div class="col-lg-8">
+        <%= render 'create', genre: @genre %>
+      </div>
+    </div>
+        <div class="container">
+    <div class = row>
+      <div class="col-lg-5">
+         <table class="table" style="font-size: 13pt; line-height: 100%;">
            <thead>
-            <tr>
-             <th>ジャンル</th>
+            <tr align="center">
+             <th bgcolor="#f5f5f5">ジャンル</th>
+             <th bgcolor="#f5f5f5"></th>
             </tr>
           </thead>
 　        <tbody>
             <!--ジャンル名表示-->
-             <tr>
-              <% @genres.each do |genre| %>
-               <td><%= genre.name %></td>
-               <td><%= link_to "編集する", edit_admin_genre_path(genre.id) %></td>
-　            <% end %>
-             </tr>
+            <% @genres.each do |genre| %>
+              <tr><th><%= genre.name %></th><td><%= link_to "編集する", edit_admin_genre_path(genre.id), class: "btn btn-success btn-sm" %></td></tr>
+　          <% end %>
           </tbody>
-      </table>
+         </table>
+      </div>
+    </div>
+
