--- a/app/views/public/deliveries/_create.html.erb
+++ b/app/views/public/deliveries/_create.html.erb
@@ -1,18 +1,17 @@
 <%= form_with model: delivery, url: public_deliveries_path, local:true, method: :post do |f| %>
   <div class="form-group">
-    <%= f.label "郵便番号(ハイフンなし)" %>
-    <%= f.text_field :postcode %>
+    <%= f.label "郵便番号（ハイフンなし）" %>
+    &emsp;<%= f.text_field :postcode, size: "30×5" %>
   </div>
-  <div class="form-group">
-    <%= f.label "住所" %>
-    <%= f.text_area :address %>
-  </div>
-  <div class="form-group">
-    <%= f.label "宛名" %>
-    <%= f.text_area :name %>
-  </div>
-
-  <div class="form-group">
-    <%= f.submit class: 'btn btn-success' %>
-  </div>
+    <div class="form-group">
+      <%= f.label "住所" %>
+      &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<%= f.text_area :address, size: "80×5" %>
+    </div>
+      <div class="form-group">
+        <%= f.label "宛名" %>
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<%= f.text_area :name, size: "30×5" %>
+      </div>
+    <div class="form-group">
+      <%= f.submit"新規登録", class: 'btn btn-success' %>
+    </div>
 <% end %>
