--- a/app/views/public/deliveries/index.html.erb
+++ b/app/views/public/deliveries/index.html.erb
@@ -1,10 +1,17 @@
-      <h2>配送先登録/一覧<h2>
-        <div>
-          <%= render 'create', delivery: @delivery %>
-        </div>
-        <div>
-          <%= render 'index', deliveries: @deliveries %>
-        </div>
-    </div>
+<div class="container">
+  <div style="d-flex align-items-center height:100px;">
+    <h2>
+      配送先登録/一覧
+    </h2>
   </div>
 </div>
+  <div class="container">
+    <div class = "row">
+      <div class="col-lg-9">
+        <%= render 'create', delivery: @delivery %>
+      </div>
+      <div class="col-lg-9">
+        <%= render 'index', deliveries: @deliveries %>
+      </div>
+    </div>
+  </div>
