--- a/app/views/public/orders/complete.html.erb
+++ b/app/views/public/orders/complete.html.erb
@@ -1,1 +1,7 @@
-<h2>ご注文ありがとうございました！</h2>
+<div class="container">
+  <div class="d-flex align-items-center justify-content-center" style="height:300px;">
+    </h2>
+      ご注文ありがとうございました！
+    </h2>
+  </div>
+</div>
