--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,17 +1,18 @@
 <div class='container'>
         <div class='d-flex align-items-center justify-content-center' style="height:300px;">
-           ようこそ、ながのCAKEへ!<br>
+           <h4>ようこそ、ながのCAKEへ!<br>
            このサイトは、ケーキ販売のECサイトになります。<br>
            会員でない方も商品の閲覧はできますが、<br>
            購入には会員登録が必要になります。
+           </h4>
         </div>
-        <h2 class='d-flex justify-content-center'>新着商品</h2>
+        <h2 class='d-flex col-md-4 mt-3 mb-4'>新着商品</h2>
               <div class='d-flex justify-content-center'>
                 <ul class="list-inline">
                   <% @items.each do |item| %>
                       <li class="list-inline-item">
                         <%= link_to public_item_path(item.id) do %>
-                          <p><%= image_tag item.image, size:'150x100' %></p>
+                          <p><%= image_tag item.image, size:'230x130' %></p>
                           <p><%= item.item_name %></p>
                         <% end %>
                          <p>¥<%= item.with_tax_price %></p>
