--- a/app/views/public/items/_genre.html.erb
+++ b/app/views/public/items/_genre.html.erb
@@ -4,9 +4,9 @@
 <div class = "border border-dark", style = "height:300px">
   <% genres.each do |genre| %>
     <p class = "ml-2 mt-2">
-      <%= link_to item_genre_items_path(genre), class:"text-dark" do %>
+      <%#= link_to item_genre_items_path(genre), class: "text-dark" do %>
         <%= genre.name %>
-      <% end %>
+      <%# end %>
     </p>
   <% end %>
 </div>
