--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,7 +1,12 @@
-<div class='container px-5 px-sm-0'>
-  <div class='col-md-8 offset-md-1'>
-    <h2>商品一覧(全<%= @items.count %>件)</h2>
-    <p><%= link_to '新規登録',new_admin_item_path %></p>
-    <p><%= render 'index', items: @items %> </p>
+<div class='container'>
+  <div class='row'>
+    <div class='col-md-4 mt-4 mb-3'  style='display:flex; flex-wrap:wrap;'>
+      <h2>商品一覧</h2>
+      <div class="mt-3"><strong>(全<%= @items.count %>件)</strong></div>
+    </div>
+    <div class="ml-auto mt-4 mb-3">
+      <p><%= link_to '新規登録',new_admin_item_path, class: "btn btn-outline-info" %></p>
+    </div>
+      <p><%= render 'index', items: @items %> </p>
   </div>
 </div>
