--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -27,5 +27,8 @@
             <% end %>
           </tbody>
         </table>
+         <div style="margin:0 auto;">
+           <%= paginate @orders %>
+         </div>
   </div>
 </div>
