--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
-  <div style="d-flex align-items-center height:100px;">
-    <h4>
+  <div class='row'>
+    <h2 class="col-md-4 mt-4 mb-4">
      ジャンル編集
-    </h4>
+    </h2>
   </div>
 </div>
   <div class="container">
