--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -16,7 +16,7 @@
     <tr>
       <td>郵便番号</td>
       <td><%= @customer.postcode %></td>
-      
+
     </tr>
     <tr>
       <td>住所</td>
@@ -33,8 +33,8 @@
   </thead>
 </table>
 <%= link_to "編集する", edit_public_customer_path, class:"btn btn-success btn-block" %><br>
-<%= link_to "注文履歴", public_orders_path, class:"btn btn-secondary btn-block" %><br>
-<%= link_to "注文履歴一覧", public_deliveries_path, class:"btn btn-dark btn-block" %><br>
+<%= link_to "注文履歴一覧", public_orders_path, class:"btn btn-secondary btn-block" %><br>
+<%= link_to "配送先一覧", public_deliveries_path, class:"btn btn-dark btn-block" %><br>
 </div>
 </div>
 </div>
