--- a/app/views/public/deliveries/_create.html.erb
+++ b/app/views/public/deliveries/_create.html.erb
@@ -5,13 +5,15 @@
   </div>
     <div class="form-group">
       <%= f.label "住所" %>
-      &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<%= f.text_area :address, size: "80×5" %>
+      &emsp;&emsp;&emsp;&emsp;&emsp;<%= f.text_area :address, size: "80×5" %>
     </div>
       <div class="form-group">
         <%= f.label "宛名" %>
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<%= f.text_area :name, size: "30×5" %>
+        &emsp;&emsp;&emsp;&emsp;&emsp;<%= f.text_area :name, size: "30×5" %>
       </div>
-    <div class="form-group">
-      <%= f.submit"新規登録", class: 'btn btn-success' %>
-    </div>
+      <div class='mx-auto col-lg-2 mb-3'>
+        <div class="">
+          <%= f.submit"新規登録", class: 'btn btn-success' %>
+        </div>
+      </div>
 <% end %>
