--- a/app/views/public/deliveries/index.html.erb
+++ b/app/views/public/deliveries/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  <div style="d-flex align-items-center height:100px;">
-    <h2>
+  <div class='row'>
+    <h2 class="col-md-4 mt-4 mb-4">
       配送先登録/一覧
     </h2>
   </div>
