--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -6,21 +6,23 @@
            購入には会員登録が必要になります。
            </h4>
         </div>
-        <h2 class='d-flex col-md-4 mt-3 mb-4'>新着商品</h2>
-              <div class='d-flex justify-content-center'>
-                <ul class="list-inline">
-                  <% @items.each do |item| %>
-                      <li class="list-inline-item">
-                        <%= link_to public_item_path(item.id) do %>
-                          <p><%= image_tag item.image, size:'230x130' %></p>
-                          <p><%= item.item_name %></p>
-                        <% end %>
-                         <p>¥<%= item.with_tax_price %></p>
-                      </li>
-                  <% end %>
-                </ul>
-              </div>
-              <div class="text-right">
-                <%= link_to "全ての商品を見る", public_items_path %>
-              </div>
+        <div class='row'>
+          <h2 class='d-flex col-md-4 mt-2 mb-4'>新着商品</h2>
+          <div class='d-flex justify-content-center'>
+            <ul class="list-inline">
+              <% @items.each do |item| %>
+                  <li class="list-inline-item">
+                    <%= link_to public_item_path(item.id) do %>
+                      <p><%= image_tag item.image, size:'230x130' %></p>
+                      <p><%= item.item_name %></p>
+                    <% end %>
+                     <p>¥<%= item.with_tax_price %></p>
+                  </li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+          <div class="text-right">
+            <%= link_to "全ての商品を見る", public_items_path %>
+          </div>
 </div>
