--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,19 +1,23 @@
 <div class='container'>
-        <div class='d-flex align-items-center justify-content-center' style="height:300px;">
-           <h4>ようこそ、ながのCAKEへ!<br>
-           このサイトは、ケーキ販売のECサイトになります。<br>
-           会員でない方も商品の閲覧はできますが、<br>
-           購入には会員登録が必要になります。
-           </h4>
+  <div class="row">
+        <div class="col-md-8 mx-auto mb-4" style='height:270px; padding:50px;'>
+          <div style="background: url(/assets/naganocake_top.jpg); height:250px; width:100%; background-position:center; background-size: cover;">
+             <div class='text-white text-center' style='text-size:40px;'>
+               ようこそ、ながのCAKEへ!<br>
+               このサイトは、ケーキ販売のECサイトになります。<br>
+               会員でない方も商品の閲覧はできますが、<br>
+               購入には会員登録が必要になります。
+             </div>
         </div>
+  </div>
         <div class='row'>
-          <h2 class='d-flex col-md-4 mt-2 mb-4'>新着商品</h2>
-          <div class='d-flex justify-content-center'>
+          <h2 class='d-flex col-md-8 mx-auto mt-5 mb-4'>新着商品</h2>
+          <div class='d-flex justify-content-center col-md-11 mx-auto'>
             <ul class="list-inline">
               <% @items.each do |item| %>
                   <li class="list-inline-item">
                     <%= link_to public_item_path(item.id) do %>
-                      <p><%= image_tag item.image, size:'230x130' %></p>
+                      <p><%= image_tag item.image, size:'200x130' %></p>
                       <p><%= item.item_name %></p>
                     <% end %>
                      <p>¥<%= item.with_tax_price %></p>
@@ -22,7 +26,8 @@
             </ul>
           </div>
         </div>
+</div>
           <div class="text-right">
             <%= link_to "全ての商品を見る", public_items_path %>
           </div>
-</div>
+
