--- a/app/assets/stylesheets/public/homes.scss
+++ b/app/assets/stylesheets/public/homes.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the public/homes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.image{
+  // background-image: image-url('images/top.jpg');
+  background-image: image-url('images/naganocake_top.jpg');
+  height: 400px;
+  width: 100% ;
+  background-size: cover;
+  background-position:center;
+  padding-top: 120px;
+  padding-left: 210px;
+}
