--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,13 +1,13 @@
 <div class='container'>
   <div class="row">
-        <div class="col-md-8 mx-auto mb-4" style='height:270px; padding:50px;'>
+        <div class="col-md-8 mx-auto mb-4" style='height:260px; padding:40px;'>
           <div style="background: url(/assets/naganocake_top.jpg); height:250px; width:100%; background-position:center; background-size: cover;">
-             <div class='text-white text-center' style='text-size:40px;'>
-               ようこそ、ながのCAKEへ!<br>
-               このサイトは、ケーキ販売のECサイトになります。<br>
-               会員でない方も商品の閲覧はできますが、<br>
-               購入には会員登録が必要になります。
-             </div>
+               <div class='text-white'  style="position:absolute; top:115px; left:160px; background-color: rgba(252,146,146,0.4); font-size: 14pt;">
+                 ようこそ、ながのCAKEへ!<br>
+                 このサイトは、ケーキ販売のECサイトになります。<br>
+                 会員でない方も商品の閲覧はできますが、<br>
+                 購入には会員登録が必要になります。
+               </div>
         </div>
   </div>
         <div class='row'>
